fix layout problem at CountryCard component

--- a/Countries/src/styles/css/style.css
+++ b/Countries/src/styles/css/style.css
@@ -166,7 +166,7 @@ body {
 }
 .main__grid {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(4, 27rem);
   grid-auto-rows: calc(var(--spacing-huge) * 0.7);
   gap: calc(var(--spacing-md) * 1.4);
 }
